; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_aes_ctr.c_av_aes_ctr_free.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_aes_ctr.c_av_aes_ctr_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AVAESCTR = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @av_aes_ctr_free(%struct.AVAESCTR* %0) #0 {
  %2 = alloca %struct.AVAESCTR*, align 8
  store %struct.AVAESCTR* %0, %struct.AVAESCTR** %2, align 8
  %3 = load %struct.AVAESCTR*, %struct.AVAESCTR** %2, align 8
  %4 = icmp ne %struct.AVAESCTR* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load %struct.AVAESCTR*, %struct.AVAESCTR** %2, align 8
  %7 = getelementptr inbounds %struct.AVAESCTR, %struct.AVAESCTR* %6, i32 0, i32 0
  %8 = call i32 @av_freep(i32* %7)
  %9 = load %struct.AVAESCTR*, %struct.AVAESCTR** %2, align 8
  %10 = call i32 @av_free(%struct.AVAESCTR* %9)
  br label %11

11:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @av_freep(i32*) #1

declare dso_local i32 @av_free(%struct.AVAESCTR*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
